docs-archive/apache-airflow-providers-openfaas/3.8.1/_sources/_api/airflow/providers/openfaas/hooks/openfaas/index.rst.txt
airflow.providers.openfaas.hooks.openfaas
=========================================

.. py:module:: airflow.providers.openfaas.hooks.openfaas


Attributes
----------

.. autoapisummary::

   airflow.providers.openfaas.hooks.openfaas.OK_STATUS_CODE


Classes
-------

.. autoapisummary::

   airflow.providers.openfaas.hooks.openfaas.OpenFaasHook


Module Contents
---------------

.. py:data:: OK_STATUS_CODE
   :value: 202


.. py:class:: OpenFaasHook(function_name=None, conn_id = 'open_faas_default', *args, **kwargs)

   Bases: :py:obj:`airflow.sdk.BaseHook`


   Interact with OpenFaaS to query, deploy, invoke and update function.

   :param function_name: Name of the function, Defaults to None
   :param conn_id: openfaas connection to use, Defaults to open_faas_default
       for example host : http://openfaas.faas.com, Connection Type : Http


   .. py:attribute:: GET_FUNCTION
      :value: '/system/function/'



   .. py:attribute:: INVOKE_ASYNC_FUNCTION
      :value: '/async-function/'



   .. py:attribute:: INVOKE_FUNCTION
      :value: '/function/'



   .. py:attribute:: DEPLOY_FUNCTION
      :value: '/system/functions'



   .. py:attribute:: UPDATE_FUNCTION
      :value: '/system/functions'



   .. py:attribute:: function_name
      :value: None



   .. py:attribute:: conn_id
      :value: 'open_faas_default'



   .. py:method:: get_conn()

      Return connection for the hook.



   .. py:method:: deploy_function(overwrite_function_if_exist, body)

      Deploy OpenFaaS function.



   .. py:method:: invoke_async_function(body)

      Invoke function asynchronously.



   .. py:method:: invoke_function(body)

      Invoke function synchronously. This will block until function completes and returns.



   .. py:method:: update_function(body)

      Update OpenFaaS function.



   .. py:method:: does_function_exist()

      Whether OpenFaaS function exists or not.



